added full-width-hero partial

--- a/Front End Assets/scss/rif.scss
+++ b/Front End Assets/scss/rif.scss
@@ -1,4 +1,4 @@
-﻿
+
 /* global */
 @import 'global/base';
 @import 'global/logo-nav';
@@ -36,3 +36,4 @@
 @import 'modules/border-box-callout'; 
 @import 'modules/colored-callout-box'; 
 @import 'modules/vertical-timeline';
+@import 'modules/full-width-hero';
