--- a/Front End Assets/scss/rif.scss
+++ b/Front End Assets/scss/rif.scss
@@ -37,3 +37,4 @@
 @import 'modules/colored-callout-box'; 
 @import 'modules/vertical-timeline';
 @import 'modules/full-width-hero';
+@import 'modules/article-preview';
