adding Add This to shell html

--- a/Front End Assets/html/templates/shell.html
+++ b/Front End Assets/html/templates/shell.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -33,5 +33,6 @@
     <script src="../scripts/third-party/freewall.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
     <script data-main="../scripts/rif-main" src="../scripts/require.js"></script>
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-571a8ab51dd5630e"></script>
 </body>
 </html>
