--- a/Front End Assets/scss/modules/_article-preview.scss
+++ b/Front End Assets/scss/modules/_article-preview.scss
@@ -13,6 +13,7 @@
         float: left;
         width: 66%;
         padding-left: 30px;
+        padding-top: 100px;
         .article-headline{
             font-size: 32px;
             color: $black;
