--- a/Front End Assets/scss/modules/_full-width-hero.scss
+++ b/Front End Assets/scss/modules/_full-width-hero.scss
@@ -1,5 +1,5 @@
 .full-width-hero{
-    background: no-repeat center center fixed; 
+    background: no-repeat center center; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
