adding johns changes

--- a/Front End Assets/scss/rif.scss
+++ b/Front End Assets/scss/rif.scss
@@ -38,3 +38,4 @@
 @import 'modules/vertical-timeline';
 @import 'modules/full-width-hero';
 @import 'modules/article-preview';
+@import 'modules/share'; 
