Adding submit button to home page donation thing

--- a/Front End Assets/html/templates/partials/home-hero.html
+++ b/Front End Assets/html/templates/partials/home-hero.html
@@ -42,6 +42,7 @@
             <span>                
                 <input type="text" placeholder="Something" />
             </span>
+            <a href="" class="btn green">Submit</a> 
         </div>
     </div>
 
