--- a/Front End Assets/scss/modules/_home-hero.scss
+++ b/Front End Assets/scss/modules/_home-hero.scss
@@ -107,6 +107,10 @@
                     margin-left: $grid-gutter-width-half;
                 }
             }
+
+            > .btn {
+                margin-left: $grid-gutter-width-half;
+            }
         }
     }
 
