--- a/Front End Assets/scss/global/_logo-nav.scss
+++ b/Front End Assets/scss/global/_logo-nav.scss
@@ -82,8 +82,11 @@
             transition: $logo-transition;
             }
             &.desktop-scrolled{
-                width: 75px;
+                width: 150px;
+                margin-top: -50px;
                 transition: $logo-transition;
+                -webkit-clip-path: circle(25% at 50% 50%);
+                clip-path: circle(25% at 50% 50%);
             }
 
             &.mobile {
