--- a/Front End Assets/scss/global/_logo-nav.scss
+++ b/Front End Assets/scss/global/_logo-nav.scss
@@ -51,7 +51,8 @@
             left: 0;
             position: absolute;
             top: 15px;
-        }
+            z-index:1;
+        } 
 
         a {
             display: inline-block;
