--- a/Front End Assets/scss/rif.scss
+++ b/Front End Assets/scss/rif.scss
@@ -39,3 +39,4 @@
 @import 'modules/full-width-hero';
 @import 'modules/article-preview';
 @import 'modules/share'; 
+@import 'modules/article-content'; 
