--- a/Front End Assets/scss/modules/_article-content.scss
+++ b/Front End Assets/scss/modules/_article-content.scss
@@ -1,8 +1,10 @@
 .article-content-container{
     width: 65%;
     margin: auto;
+    margin-top: 60px;
     h1{
       text-align: left;
         text-transform: capitalize;
+        margin-bottom: 10px;
     }
 }
