Adding parallax to some of the elements, added a parallax.js file that is still WIP

--- a/Front End Assets/html/templates/partials/home-hero.html
+++ b/Front End Assets/html/templates/partials/home-hero.html
@@ -9,7 +9,7 @@
     <div class="row">
         <div class="wrapper">
             <div class="top-circle">
-                <div class="circle-img blue medium">
+                <div class="circle-img blue medium" data-scroll-speed="10">
                     <img src="../images/cms/circle-img-test-2.jpg" alt="Image Alt" />
                 </div>
             </div><!-- .top-circle -->
@@ -18,12 +18,12 @@
 
             <div class="bottom-circles">
                 <div class="left">
-                    <div class="circle-img green small">
+                    <div class="circle-img green small" data-scroll-speed="8">
                         <img src="../images/cms/circle-img-test-2.jpg" alt="Image Alt" />
                     </div>
                 </div>
                 <div class="right">
-                    <div class="circle-img orange large">
+                    <div class="circle-img orange large" data-scroll-speed="3">
                         <img src="../images/cms/circle-img-test.jpg" alt="Image Alt" />
                     </div>
                 </div>
