--- a/Front End Assets/html/templates/partials/large-text-image-video-hero.html
+++ b/Front End Assets/html/templates/partials/large-text-image-video-hero.html
@@ -7,7 +7,7 @@
 
             <!-- changing classes here can change background color: need to determine choices here -->
             <div class="left">
-                <div class="bg-blue">
+                <div class="bg-blue" data-scroll-speed="5">
                     <h1>Page Title</h1>
                     <p>Donsed odio dui. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis.</p>
                 </div>
