--- a/Front End Assets/html/templates/partials/text-with-circle-images.html
+++ b/Front End Assets/html/templates/partials/text-with-circle-images.html
@@ -3,10 +3,10 @@
     <div class="row">
 
         <div class="images">
-            <div class="circle-img green small">
+            <div class="circle-img green small" data-scroll-speed="8">
                 <img src="../images/cms/circle-img-test-2.jpg" alt="Image Alt"/>
             </div>
-            <div class="circle-img orange large">
+            <div class="circle-img orange large" data-scroll-speed="3">
                 <img src="../images/cms/circle-img-test.jpg" alt="Image Alt" />
             </div>
         </div>
