Added free text block

--- a/Front End Assets/scss/modules/_home-hero.scss
+++ b/Front End Assets/scss/modules/_home-hero.scss
@@ -109,7 +109,12 @@
             }
 
             > .btn {
+              @media #{$media-mobile-view} {
+                  margin-top: $v-spacing-xs;
+              }
+              @media #{$media-desktop-view} {
                 margin-left: $grid-gutter-width-half;
+              }
             }
         }
     }
