--- a/Front End Assets/scss/rif.scss
+++ b/Front End Assets/scss/rif.scss
@@ -33,10 +33,11 @@
 @import 'modules/gallery';
 @import 'modules/circle-text';
 @import 'modules/title-and-text';
-@import 'modules/border-box-callout'; 
-@import 'modules/colored-callout-box'; 
+@import 'modules/border-box-callout';
+@import 'modules/colored-callout-box';
 @import 'modules/vertical-timeline';
 @import 'modules/full-width-hero';
 @import 'modules/article-preview';
-@import 'modules/share'; 
-@import 'modules/article-content'; 
+@import 'modules/share';
+@import 'modules/article-content';
+@import 'modules/free-text-block'; 
