--- a/Front End Assets/html/templates/partials/donation-page-tabs.html
+++ b/Front End Assets/html/templates/partials/donation-page-tabs.html
@@ -9,83 +9,74 @@
             <p>$10 will provide books to 12 of our community's most at risk children.</p>
         </div>
     </div>
-
+    <div class="row">
+    <div class="content">
     <div id="tabs" class="rif-form">
         <ul class="row">
-            <li class="col-md-4"><a href="#tabs-1">Donate a Book</a></li>
-            <li class="col-md-4"><a href="#tabs-2">Fund a Library</a></li>
-            <li class="col-md-4"><a href="#tabs-3">Become a Partner</a></li>
+            <li class="column"><a href="#tabs-1">Donate a Book</a></li>
+            <li class="column"><a href="#tabs-2">Fund a Library</a></li>
+            <li class="column"><a href="#tabs-3">Become a Partner</a></li>
         </ul>
         <div id="tabs-1">
             <div class="row">
-                <div class="col-md-4">
+                <div class="column">
                     <a href="#">$10</a>
                 </div>
-                <div class="col-md-4">
+                <div class="column">
                     <a href="#">$25</a>
                 </div>
-                <div class="col-md-4">
+                <div class="column">
                     <a href="#">$50</a>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-12 other-amount">
-                    <span class="cash">$</span><input type="text" name="Other Amount" placeholder="OTHER AMOUNT">
-                </div>
+            <div class="other-amount">
+                <span class="cash">$</span><input type="text" name="Other Amount" placeholder="OTHER AMOUNT">
             </div>
-            <div class="row">
-                <div class="col-md-12 donate-button">
-                    <a href="#" class="give" title="Donate">Give</a>
-                </div>
+            <div class="donate-button">
+                <a href="#" class="give" title="Donate">Give</a>
             </div>
         </div>
 
         <div id="tabs-2">
-            <div class="row">
-                <div class="col-md-4">
-                    <a href="#">$10</a>
-                </div>
-                <div class="col-md-4">
-                    <a href="#">$25</a>
-                </div>
-                <div class="col-md-4">
-                    <a href="#">$50</a>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12 other-amount">
-                    <span class="cash">$</span><input type="text" name="Other Amount" placeholder="OTHER AMOUNT">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12 donate-button">
-                    <a href="#" class="give" title="Donate">Give</a>
-                </div>
-            </div>
+          <div class="row">
+              <div class="column">
+                  <a href="#">$second tab</a>
+              </div>
+              <div class="column">
+                  <a href="#">$25</a>
+              </div>
+              <div class="column">
+                  <a href="#">$50</a>
+              </div>
+          </div>
+          <div class="other-amount">
+              <span class="cash">$</span><input type="text" name="Other Amount" placeholder="OTHER AMOUNT">
+          </div>
+          <div class="donate-button">
+              <a href="#" class="give" title="Donate">Give</a>
+          </div>
         </div>
 
         <div id="tabs-3">
-            <div class="row">
-                <div class="col-md-4">
-                    <a href="#">$10</a>
-                </div>
-                <div class="col-md-4">
-                    <a href="#">$25</a>
-                </div>
-                <div class="col-md-4">
-                    <a href="#">$50</a>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12 other-amount">
-                    <span class="cash">$</span><input type="text" name="Other Amount" placeholder="OTHER AMOUNT">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12 donate-button">
-                    <a href="#" class="give" title="Donate">Give</a>
-                </div>
-            </div>
+          <div class="row">
+              <div class="column">
+                  <a href="#">$third tab</a>
+              </div>
+              <div class="column">
+                  <a href="#">$25</a>
+              </div>
+              <div class="column">
+                  <a href="#">$50</a>
+              </div>
+          </div>
+          <div class="other-amount">
+              <span class="cash">$</span><input type="text" name="Other Amount" placeholder="OTHER AMOUNT">
+          </div>
+          <div class="donate-button">
+              <a href="#" class="give" title="Donate">Give</a>
+          </div>
         </div>
     </div>
+  </div>
+</div>
 </div><!-- /.donation -->
