--- a/Front End Assets/scss/modules/_home-hero.scss
+++ b/Front End Assets/scss/modules/_home-hero.scss
@@ -71,6 +71,10 @@
     .donation {
         margin: $v-spacing-sm;
 
+        h3 {
+          font-size: 15px; 
+        }
+
         @media #{$media-desktop-view} {
             align-items: center;
             display: flex;
