Changed highlight color, added timeout to share textswap function, it wasn't loading in time.

--- a/Front End Assets/scss/global/_base.scss
+++ b/Front End Assets/scss/global/_base.scss
@@ -282,5 +282,5 @@ a:active,
 }
 
 // HIGHLIGHT COLOR
-::-moz-selection { background: #e90f22; }
-::selection { background: #e90f22; }
+::-moz-selection { background: $light-green; }
+::selection { background: $light-green; }
