--- a/Front End Assets/scss/modules/_donation-page-tabs.scss
+++ b/Front End Assets/scss/modules/_donation-page-tabs.scss
@@ -14,15 +14,20 @@
 }
 
 .content {
-  @media #{$media-desktop-view} {
-      @include make-md-column(8);
-      @include make-md-column-offset(2);
-  }
+    @media #{$media-desktop-view} {
+        @include make-md-column(8);
+        @include make-md-column-offset(2);
+    }
 }
 
 #tabs {
     border: none;
     font-family: "Poppins", sans-serif;
+
+    @media #{$media-mobile-view} {
+        margin-left:15px;
+        margin-right:15px; 
+    }
 }
 
 .ui-tabs {
@@ -31,17 +36,34 @@
 
 .ui-tabs .ui-tabs-nav {
     padding: 0;
+
+    @media #{$media-xs} {
+        border-radius:0; 
+        border-left:2px solid $light-green; 
+        border-right:2px solid $light-green;
+        border-top:2px solid $light-green;
+    }
 }
 
 .ui-tabs .ui-tabs-panel {
-    border: 2px solid #9ef2d8;
+    border: 2px solid $light-green;
     border-top: none;
     padding: 35px 15px 30px 15px;
+
+    @media #{$media-xs} {
+        border:none; 
+        padding: 15px;
+    }
 }
 
 .ui-tabs .ui-tabs-panel .col-md-4 a {
-    border: 2px solid #9ef2d8;
+    border: 2px solid $light-green;
     border-radius: 5px;
+
+    @media #{$media-xs} {
+        border: none;
+        border-radius: 0;
+    }
 }
 
 .ui-tabs .ui-tabs-nav .ui-tabs-anchor {
@@ -50,6 +72,10 @@
     text-decoration: none;
     outline: 0;
     font-size: 12px;
+
+    @media #{$media-xs} {
+        float: none;
+    }
 }
 
 .ui-widget-header {
@@ -59,11 +85,16 @@
 
 .ui-tabs .ui-tabs-nav li {
     margin: 0;
-    border-bottom: 2px solid #9ef2d8;
+    border-bottom: 2px solid $light-green;
+
+    @media #{$media-xs} {
+        border-radius:0; 
+        float: none; 
+    }
 }
 
 .ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active {
-    border: 2px solid #9ef2d8;
+    border: 2px solid $light-green;
 }
 
 .ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
@@ -72,10 +103,15 @@
 }
 
 .ui-tabs .ui-tabs-nav li.ui-tabs-active {
-    border: 2px solid #9ef2d8;
+    border: 2px solid $light-green;
     border-bottom: none;
     margin-bottom: 0;
     padding-bottom: 0;
+
+    @media #{$media-xs} {
+        background:$light-green; 
+        border: none;
+    }
 }
 
 .donate-button {
@@ -88,23 +124,40 @@
 }
 
 .other-amount {
-    border: 2px solid #9ef2d8;
+    border: 2px solid $light-green;
     border-radius: 5px;
     margin: 15px;
     margin-bottom: 25px;
     text-align: center;
     padding: 15px;
+
+    @media #{$media-mobile-view} {
+        margin: 0 auto 15px;
+        padding: 5px;
+        width:90%; 
+    }
 }
 
-.other-amount input {
+.other-amount input[type=text] {
     margin: 0 auto;
     border: none;
     font-family: "Poppins", sans-serif;
     margin-left: 30px;
     outline: 0;
     font-size: 18px;
+
+    @media #{$media-mobile-view} {
+        display: inline-block;
+        font-size: 14px;
+        margin-left:10px; 
+        width: 60%;
+    }
 }
 
 .other-amount .cash {
     margin-left: 40px;
+
+    @media #{$media-mobile-view} {
+        margin-left:10px;
+    }
 }
