moved Add This down to the middle of the page

--- a/Front End Assets/scss/modules/_share.scss
+++ b/Front End Assets/scss/modules/_share.scss
@@ -26,6 +26,6 @@
     opacity: 1 !important;
 }
 
-//#at4-soc{
-//    top: 40% !important;
-//}
+.at4-share-outer #at4-soc{
+    top: 40% !important;
+}
