--- a/Front End Assets/scss/global/_base.scss
+++ b/Front End Assets/scss/global/_base.scss
@@ -164,6 +164,8 @@ a:active,
 
 // COLOR OVERLAYS & CIRCLES
 .circle-img {
+    @include circle-img-base;
+    
     img {
         @include img-responsive;
     }
@@ -282,5 +284,5 @@ a:active,
 }
 
 // HIGHLIGHT COLOR
-::-moz-selection { background: $light-green; }
-::selection { background: $light-green; }
+::-moz-selection { background: #e90f22; }
+::selection { background: #e90f22; }
