fixed content callout hero margin issue

--- a/Front End Assets/scss/modules/_content-callout-hero.scss
+++ b/Front End Assets/scss/modules/_content-callout-hero.scss
@@ -13,6 +13,8 @@
     }
 
     .content {
+        margin-left:0;   
+
         @media #{$media-desktop-view} {
             align-content: center;
             display: flex;
