--- a/Front End Assets/scss/modules/_three-column-circle-image-text.scss
+++ b/Front End Assets/scss/modules/_three-column-circle-image-text.scss
@@ -1,7 +1,7 @@
 ﻿@import "../variables";
 @import "../mixins";
 
-.three-column-circle-image-text {
+.equal-col {
     text-align: center;
 
     .circle-img {
