CSS bug fixes for: spacing on image/text components, main nav donate button, donation page, highlight color

--- a/Front End Assets/html/templates/partials/logo-nav.html
+++ b/Front End Assets/html/templates/partials/logo-nav.html
@@ -15,7 +15,7 @@
                 <li><a href="community.html" title="Get Involved">Get Involved</a></li>
                 <li><a href="about-us.html" title="About Us">About Us</a></li>
                 <li><a href="#" title="Book Club">Book Club</a></li>
-                <li class="button"><a href="donation.html" title="Donate">Donate</a></li>
+                <li class="last"><a href="donation.html" title="Donate">Donate</a></li>
             </ul>
         </nav>
     </div>
