--- a/Front End Assets/scss/modules/_donation-page-tabs.scss
+++ b/Front End Assets/scss/modules/_donation-page-tabs.scss
@@ -36,7 +36,7 @@
 
     @media #{$media-mobile-view} {
         margin-left:15px;
-        margin-right:15px; 
+        margin-right:15px;
     }
 }
 
@@ -48,8 +48,8 @@
     padding: 0;
 
     @media #{$media-xs} {
-        border-radius:0; 
-        border-left:2px solid $light-green; 
+        border-radius:0;
+        border-left:2px solid $light-green;
         border-right:2px solid $light-green;
         border-top:2px solid $light-green;
     }
@@ -61,7 +61,7 @@
     padding: 30px;
 
     @media #{$media-xs} {
-        border:none; 
+        border:none;
         padding: 15px 0;
     }
 }
@@ -98,8 +98,8 @@
     border-bottom: 2px solid $light-green;
 
     @media #{$media-xs} {
-        border-radius:0; 
-        float: none; 
+        border-radius:0;
+        float: none;
     }
 }
 
@@ -119,7 +119,7 @@
     padding-bottom: 0;
 
     @media #{$media-xs} {
-        background:$light-green; 
+        background:$light-green;
         border: none;
     }
 }
@@ -152,15 +152,15 @@
     margin: 0 auto;
     border: none;
     font-family: "Poppins", sans-serif;
-    margin-left: 30px;
     outline: 0;
     font-size: 18px;
+    width: 175px; 
 
     @media #{$media-mobile-view} {
         display: inline-block;
         font-size: 14px;
-        height:50px;  
-        margin-left:10px; 
+        height:50px;
+        margin-left:10px;
         width: 60%;
     }
 }
