fixing donate button styling

--- a/Front End Assets/scss/global/_main-navigation.scss
+++ b/Front End Assets/scss/global/_main-navigation.scss
@@ -36,7 +36,7 @@
                 }
             }
 
-            &.button {
+            &.button, &:last-child {
                 a {
                     @include button-rounded;
                     @include button-green;
