added blog styles

--- a/Front End Assets/scss/modules/_rif-book.scss
+++ b/Front End Assets/scss/modules/_rif-book.scss
@@ -2,27 +2,10 @@
 @import "../mixins";
 
 .rif-book {
-    @include box-shadow;
-    @include circle;
-    background: url(../images/rif-book.png) no-repeat 0 0;
-    height: 60px;
-    margin: 0 auto $v-spacing-sm;
-    width: 60px;
-
-    @media #{$media-desktop-view} {
-        left: 50%;
-        margin:0 0 0 -30px;
-        position: absolute;
-        top: 0;
-        z-index: 10;
-    }
+    @include rif-book;
 } 
 
 /* adjust the page title */
 h1.rif-book-margin-top {
-    margin-bottom:$v-spacing-sm;
-
-    @media #{$media-desktop-view} {
-        padding-top:90px;
-    }
+    @include rif-book-margin-top;
 }
