--- a/Front End Assets/scss/rif.scss
+++ b/Front End Assets/scss/rif.scss
@@ -8,6 +8,7 @@
 @import 'global/bootstrap-modal';
 @import 'global/responsive-iframe';
 @import 'global/videos';
+@import 'global/blog';
 
 /* layouts */
 @import 'layouts/two-equal-col';
