--- a/Front End Assets/scss/_mixins.scss
+++ b/Front End Assets/scss/_mixins.scss
@@ -188,3 +188,39 @@
         @include circle;
     }
 }
+
+// RIF Book Header
+@mixin rif-book {
+    @include box-shadow;
+    @include circle;
+    background: url(../images/rif-book.png) no-repeat 0 0;
+    height: 60px;
+    margin: 0 auto $v-spacing-sm;
+    width: 60px;
+
+    @media #{$media-desktop-view} {
+        left: 50%;
+        margin:0 0 0 -30px;
+        position: absolute;
+        top: 0;
+        z-index: 10;
+    }
+}
+
+@mixin rif-book-margin-top {
+    margin-bottom:$v-spacing-sm;
+
+    @media #{$media-desktop-view} {
+        padding-top:90px;
+    }
+}
+
+@mixin rif-book-prefix {
+    &:before {
+        @include rif-book;
+        content: '';
+    }
+    position: relative;
+    background-color: transparent;
+    @include rif-book-margin-top;
+}
